force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Has_This_Year_ID_Tag__c</fullName>
        <formula>OR(
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2017/18&quot;), 
TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c) +1),2) = &quot;2017/18&quot; 
   ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2018/19&quot;), 
TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c) +1),2) = &quot;2018/19&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2019/20&quot;), 
TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c) +1),2) = &quot;2019/20&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2020/21&quot;), 
TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c) +1),2) = &quot;2020/21&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2021/22&quot;), 
TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c) +1),2) = &quot;2021/22&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2022/123&quot;), 
TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c) +1),2) = &quot;2022/23&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2023/24&quot;), 
TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_This_Fiscal_Year__c) +1),2) = &quot;2023/24&quot; 
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has This Year ID Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Whole_School_Registration__c</fullName>
        <label>Has Whole School Registration</label>
        <summaryFilterItems>
            <field>Registration__c.Is_Whole_School_Group_Registration__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Registration__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>House__c</fullName>
        <formula>TEXT( Admissions_File__r.House__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Tag_Content_Status__c</fullName>
        <formula>IF(
   AND(
       NOT(ISBLANK(FirstName)),
       NOT(ISBLANK(TEXT(Contact_Relationship__c))),
       TEXT(Kompanion_Has_Photo__c) = &quot;Yes&quot;
       ),
   &quot;Complete&quot;,
   IF(
      ISBLANK(FirstName),
      &quot;1. Missing First Name &quot;,
      &quot;&quot;
      )&amp;
   IF(
      ISBLANK(TEXT(Contact_Relationship__c)),
      &quot;2. Missing Relationship &quot;,
      &quot;&quot;
      )&amp;
   IF(
      TEXT(Kompanion_Has_Photo__c) != &quot;Yes&quot;,
      &quot;3. Missing Photo &quot;,
      &quot;&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Tag Content Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Tags_Created_For__c</fullName>
        <inlineHelpText>After creating an ID tag for this contact the field should be updated with the relevant academic year to track the same.</inlineHelpText>
        <label>ID Tags Created For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Exclude_from_ID_Tag_Printing__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Academic_Years</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISM_Kry_Parent_Upper_Lower__c</fullName>
        <formula>IF( AND ( Has_Student_in_Campus_1_Contact__c &gt; 0, Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c &gt; 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c + Year_2__c + Year_3__c + Year_4__c = 0), &quot;Upper&quot;, 

IF ( AND ( Has_Student_in_Campus_1_Contact__c &gt; 0, Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c = 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c + Year_2__c + Year_3__c + Year_4__c &gt; 0), &quot;Lower&quot;, 

IF ( AND ( Has_Student_in_Campus_1_Contact__c &gt; 0, Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c &gt; 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c + Year_2__c + Year_3__c + Year_4__c &gt; 0), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISM Kry Parent Upper/Lower</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISM_Ros_Parent_EYFS_Primary__c</fullName>
        <formula>IF( AND ( Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c &gt; 0, Pre_Nursery__c + Nursery__c + Reception__c = 0), &quot;Primary&quot;, 

IF( AND ( Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c = 0, Pre_Nursery__c + Nursery__c + Reception__c &gt; 0), &quot;EYFS&quot;, 

IF( AND ( Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c &gt; 0, Pre_Nursery__c + Nursery__c + Reception__c &gt; 0), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISM Ros Parent EYFS/Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Notifications_Email__c</fullName>
        <label>IT Notifications Email (Contact)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_A_to_L_Parent_Contact__c</fullName>
        <formula>OR(BEGINS(LastName, &quot;A&quot;), BEGINS(LastName, &quot;B&quot;), BEGINS(LastName, &quot;C&quot;), BEGINS(LastName, &quot;D&quot;), BEGINS(LastName, &quot;E&quot;), BEGINS(LastName, &quot;F&quot;), BEGINS(LastName, &quot;G&quot;), BEGINS(LastName, &quot;H&quot;), BEGINS(LastName, &quot;I&quot;), BEGINS(LastName, &quot;J&quot;), BEGINS(LastName, &quot;K&quot;), BEGINS(LastName, &quot;L&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is A to L Parent (Contact)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BSG_Record_Temp__c</fullName>
        <formula>AND(OR(SchoolText__c = &quot;The British School of Guangzhou&quot;, School__c = &quot;The British School of Guangzhou&quot;), RecordType.Name = &quot;Additional Parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is BSG Record (Temp)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_User_s_Student__c</fullName>
        <formula>IF($User.Id = Tutor_Group__r.Owner:User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User&apos;s Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_M_to_Z_Parent_Contact__c</fullName>
        <formula>OR(BEGINS(LastName, &quot;M&quot;), BEGINS(LastName, &quot;N&quot;), BEGINS(LastName, &quot;O&quot;), BEGINS(LastName, &quot;P&quot;), BEGINS(LastName, &quot;Q&quot;), BEGINS(LastName, &quot;R&quot;), BEGINS(LastName, &quot;S&quot;), BEGINS(LastName, &quot;T&quot;), BEGINS(LastName, &quot;U&quot;), BEGINS(LastName, &quot;V&quot;), BEGINS(LastName, &quot;W&quot;), BEGINS(LastName, &quot;X&quot;), BEGINS(LastName, &quot;Y&quot;), BEGINS(LastName, &quot;Z&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is M to Z Parent (Contact)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Tutor_Group__c</fullName>
        <formula>Tutor_Group__r.OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Tutor Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Next_Year_Staff_Member__c</fullName>
        <formula>AND(
    Staff_Member_Record__r.Staff_Member_End_Date__c &gt; $User.Start_Date_Next_Fiscal_Year__c, 
    Staff_Member_Record__r.Staff_Member_Start_Date__c &lt; $User.End_Date_Next_Fiscal_Year__c 
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next Year Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Orphaned_Contact_Record__c</fullName>
        <description>Used to quickly identify additional parents that aren&apos;t linked to a family file and used in iSAMS data exports for NAE</description>
        <formula>AND(
    RecordType.DeveloperName = &quot;Additional_Parent&quot;,
    ISBLANK(Main_Parent_File__c)
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Orphaned Contact Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Contact__c</fullName>
        <formula>AND(
    RecordType.DeveloperName = &quot;Additional_Parent&quot;,
    Main_Parent_File__r.Related_Contact_Record_P2__r.Id = Id,
    TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;Second Parent&quot;
    )</formula>
        <label>Is Primary Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Year_Staff_Member__c</fullName>
        <formula>AND(
    Staff_Member_Record__r.Staff_Member_End_Date__c &gt; $User.Start_Date_This_Fiscal_Year__c, 
    Staff_Member_Record__r.Staff_Member_Start_Date__c &lt; $User.End_Date_This_Fiscal_Year__c 
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This Year Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS2__c</fullName>
        <formula>Year_3__c + Year_4__c + Year_5__c + Year_6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KS2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Stage_Contact__c</fullName>
        <formula>IF(OR( Pre_Nursery__c &gt; 0, Nursery__c &gt; 0, Reception__c &gt; 0), &quot;EYFS&quot;, &quot;&quot;) &amp; &quot; &quot; &amp; 
IF(OR(Year_1__c &gt; 0, Year_2__c &gt; 0), &quot;Key Stage 1&quot;, &quot;&quot;) &amp; &quot; &quot; &amp; 
IF(OR(Year_3__c &gt; 0, Year_4__c &gt; 0, Year_5__c &gt; 0, Year_6__c &gt; 0), &quot;Key Stage 2&quot;, &quot;&quot;) &amp; &quot; &quot; &amp; 
IF(OR(Year_7__c &gt; 0, Year_8__c &gt; 0, Year_9__c &gt; 0), &quot;Key Stage 3&quot;, &quot;&quot;) &amp; &quot; &quot; &amp; 
IF(OR(Year_10__c &gt; 0, Year_11__c &gt; 0), &quot;Key Stage 4&quot;, &quot;&quot;) &amp; &quot; &quot; &amp; 
IF(OR(Year_12__c &gt; 0, Year_13__c &gt; 0), &quot;Key Stage 5&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Stage (Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kompanion_Has_Photo__c</fullName>
        <description>Set directly from Kompanion when a contact photo is added or deleted</description>
        <label>Has Photo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Option_s__c</fullName>
        <formula>IF(
   NOT(ISBLANK(Admissions_File__r.SK_Obligatory_Local_Language__c)), 
   Admissions_File__r.SK_Obligatory_Local_Language__c&amp;&quot;; &quot;,
   &quot;&quot;
   )&amp; 
IF(
   NOT(ISBLANK(TEXT(Admissions_File__r.SK_MFL_1_Option__c))), 
   TEXT(Admissions_File__r.SK_MFL_1_Option__c)&amp;&quot;; &quot;,
   &quot;&quot;
   )&amp; 
IF(
   NOT(ISBLANK(TEXT(Admissions_File__r.SK_MFL_2_Option__c))), 
   TEXT(Admissions_File__r.SK_MFL_2_Option__c)&amp;&quot;; &quot;,
   &quot;&quot;
   )&amp; 
IF(
   NOT(ISBLANK(TEXT(Admissions_File__r.SK_MFL_3_Option__c))), 
   TEXT(Admissions_File__r.SK_MFL_3_Option__c)&amp;&quot;; &quot;,
   &quot;&quot;
   )



/*IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;Bahasa&quot;), &quot;Bahasa; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;Burmese&quot;), &quot;Burmese; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;Filipino&quot;), &quot;Filipino; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;French&quot;), &quot;French; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;German&quot;), &quot;German; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;Mandarin&quot;), &quot;Mandarin; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;Portuguese&quot;), &quot;Portuguese; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;Russian&quot;), &quot;Russian; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;Spanish&quot;), &quot;Spanish; &quot;, &quot;&quot;)&amp;
IF(INCLUDES(Admissions_File__r.Language_Option_s__c, &quot;Uzbek&quot;), &quot;Uzbek; &quot;, &quot;&quot;)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Option(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leaving_Date_30_Contact__c</fullName>
        <formula>Main_Parent_File__r.Leaving_Date_30_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaving Date -30 (Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leaving_Date_60__c</fullName>
        <formula>Main_Parent_File__r.Leaving_Date_60__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaving Date -60 (Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leaving_Date__c</fullName>
        <formula>Main_Parent_File__r.Leaving_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaving Date (Contact)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leaving_Date_from_student__c</fullName>
        <formula>Admissions_File__r.Leaving_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Leaving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leaving_Next_School__c</fullName>
        <formula>Admissions_File__r.Next_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaving to (Next School)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_User_Record__c</fullName>
        <formula>IF(User__c = &quot;&quot;, &quot;No User Linked&quot;, HYPERLINK(&quot;https://ap4.salesforce.com/&quot;&amp;CASESAFEID(User__r.Id)&amp;&quot;?noredirect=1&quot;, &quot;Click Here&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to User Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Parent_File_Id__c</fullName>
        <formula>Main_Parent_File__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Parent File Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Parent_File__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Family File</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not a parent record.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Parents &amp; Student Academic Files</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Phone_Combined__c</fullName>
        <description>Combines (separated by a space) and cleans the mobile phone number of a contact. Used primarily for passing the number to School Kompanion.</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(xsms__Mobile_Phone_Country_Code__c, &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;), &quot;#&quot;, &quot;&quot;)

&amp; &quot; &quot; &amp;

SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;), &quot;#&quot;, &quot;&quot;)</formula>
        <label>Main Phone (Combined)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Alternate_Parent__c</fullName>
        <formula>IF( 
!ISBLANK(Main_Parent_File__r.Alternate_Contact_User_ID__c), 
HYPERLINK(&quot;https://schoolportal.force.com/parents/_ui/core/userprofile/UserProfilePage?u=&quot;&amp; Main_Parent_File__r.Alternate_Contact_User_ID__c&amp;&quot;&amp;tab=sfdc.ProfilePlatformFeed&quot; , 
&quot;Send Message to Parent&quot;), 
&apos;&apos; 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IMPORTANT: Link will only work if you have recently switched to the parent portal. If it does not work simply switch to the parent portal, back to the &apos;internal&apos; system in the top right-hand corner and then try the link again.</inlineHelpText>
        <label>Message Alternate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Primary_Parent__c</fullName>
        <formula>IF(
   !ISBLANK(Main_Parent_File__r.Primary_Contact_User_Id__c),
    HYPERLINK(&quot;https://schoolportal.force.com/parents/_ui/core/userprofile/UserProfilePage?u=&quot;&amp; Main_Parent_File__r.Primary_Contact_User_Id__c&amp;&quot;&amp;tab=sfdc.ProfilePlatformFeed&quot; , 
&quot;Send Message to Parent&quot;),
   &apos;&apos;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IMPORTANT: Link will only work if you have recently switched to the parent portal. If it does not work simply switch to the parent portal, back to the &apos;internal&apos; system in the top right-hand corner and then try the link again.</inlineHelpText>
        <label>Message Primary Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Initials_iSAMS__c</fullName>
        <formula>LEFT(FirstName, 1) &amp; LEFT(LastName, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Initials (iSAMS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Position_Optional__c</fullName>
        <label>Year Group 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PN1</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>Y1</fullName>
                </value>
                <value>
                    <fullName>Y2</fullName>
                </value>
                <value>
                    <fullName>Y3</fullName>
                </value>
                <value>
                    <fullName>Y4</fullName>
                </value>
                <value>
                    <fullName>Y5</fullName>
                </value>
                <value>
                    <fullName>Y6</fullName>
                </value>
                <value>
                    <fullName>Y7</fullName>
                </value>
                <value>
                    <fullName>Y8</fullName>
                </value>
                <value>
                    <fullName>Y9</fullName>
                </value>
                <value>
                    <fullName>Y10</fullName>
                </value>
                <value>
                    <fullName>Y11</fullName>
                </value>
                <value>
                    <fullName>Y12</fullName>
                </value>
                <value>
                    <fullName>Y13</fullName>
                </value>
                <value>
                    <fullName>Whole School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <formula>TEXT(Admissions_File__r.Nationality__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewsEvents_Report_Accessed__c</fullName>
        <label>Calendar Tab Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Newsletter_Recipient__c</fullName>
        <description>Formula evaluates if the contact is eligible to be included in Termly Newsletter (only parents of currently enrolled students or students starting within next 30 days). NB. Will show #Error! on person account page layout but in the database the value calculates correctly for use in the API and via reports.</description>
        <formula>AND(
    OR(
       Family_Status__c = &quot;In School&quot;,
       Account.Family_Status__c = &quot;In School&quot;,
       AND(
           Family_Status__c = &quot;Future Enrolment&quot;,
           Starting_Date_30__c = &quot;TRUE&quot;
           ),
       AND(
           Account.Family_Status__c = &quot;Future Enrolment&quot;,
           Account.Starting_Date_30__c = &quot;TRUE&quot;
           )
       ),
    NOT(ISBLANK(Email)),
    HasOptedOutOfEmail = FALSE,
    RecordTypeId != &quot;0126F000001hVzl&quot;
    )</formula>
        <label>Newsletter Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <formula>Admissions_File__r.Nickname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nickname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Calendar_View_Last_7_Days__c</fullName>
        <formula>OR(TODAY() - 6 &gt; DATEVALUE(NewsEvents_Report_Accessed__c), ISBLANK(NewsEvents_Report_Accessed__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Calendar View Last 7 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Login_in_Last_7_Days__c</fullName>
        <formula>IF(DATEVALUE(Main_Parent_File__r.User_Last_Login__pc) + 7 &lt; TODAY(), Main_Parent_File__r.First_Parent_Full_Name__c&amp;BR(), &quot;&quot;) &amp; 

IF(DATEVALUE(Main_Parent_File__r.Related_Contact_Record_P2__r.User_Last_Login__c) + 7 &lt; TODAY(), Main_Parent_File__r.Second_Parent_Full_Name__c, &quot;&quot;)</formula>
        <label>No Login in Last 7 Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Whole_School_regs__c</fullName>
        <label>Number of Whole School regs</label>
        <summaryFilterItems>
            <field>Registration__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Registration__c.Is_Whole_School_Group_Registration__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Registration__c.Group__c</field>
            <operation>equals</operation>
            <value>a206F00000G33JD, a206F00000G33Io, a206F00000G33JI, a206F00000G33J8, a206F00000G33It, a206F00000G33Iy, a206F00000G33J3</value>
        </summaryFilterItems>
        <summaryForeignKey>Registration__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nursery__c</fullName>
        <formula>Main_Parent_File__r.Nursery1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nursery (Contact)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Only_1_Academic_File_Per_Student_Allowed__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Only 1 Academic File Per Student Allowed</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Application_Fee_Paid__c</fullName>
        <formula>IF ( Admissions_File__r.Assessment_Fee__c = TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Application Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Attending_School__c</fullName>
        <formula>TEXT(Admissions_File__r.Add_to_Register__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Attending School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Days_Notice_Given__c</fullName>
        <formula>Admissions_File__r.Day_Notice_Given__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Days Notice Given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Leaving_Notice_Date__c</fullName>
        <formula>Admissions_File__r.Leaving_Notice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Leaving Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reason_Cancelled__c</fullName>
        <formula>TEXT(Admissions_File__r.Reason_Cancelled_Rejected__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Reason Cancelled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Admissions_File__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_W_List_Qualification_Date__c</fullName>
        <formula>Admissions_File__r.Waiting_List_Qualification_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity W/List Qualification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PN1__c</fullName>
        <formula>Main_Parent_File__r.PreNursery__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PN1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Email_1__c</fullName>
        <formula>Main_Parent_File__r.Email_1__c</formula>
        <label>Parent Email 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Full_Name_Exc_Sal__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Full Name (Exc. Sal)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Full_Name__c</fullName>
        <formula>TEXT(Salutation) &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Photo_Filename__c</fullName>
        <formula>IF(
   TEXT(Kompanion_Has_Photo__c) = &quot;Yes&quot;,
   Staff_Member_Parent_Number__c &amp;&quot;.jpg&quot;,
   &quot;&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent/Guardian Photo Filename</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Photo__c</fullName>
        <formula>IF(
   TEXT(Kompanion_Has_Photo__c) = &quot;Yes&quot;,
   IMAGE(&quot;https://schoolkompanion.co.uk/S131/S131/images/profile/contact/&quot;&amp; Staff_Member_Parent_Number__c &amp;&quot;.jpg&quot;, 
&quot;Please ensure you are logged into Kompanion in this browser to view this photo.&quot;,
 150, 150),
   IF(
      OR(
         SchoolText__c = &quot;The British International School of Kuala Lumpur&quot;,
         SchoolText__c = &quot;The British School of Brasilia&quot;
         ),
      &quot;This contact doesn&apos;t yet have a photo. Make sure you are logged in to Kompanion and then navigate to the contact record to add one.&quot;,
      &quot;Not yet configured for &quot;&amp; SchoolText__c&amp;&quot;.&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To add, remove or change the photo shown here, please make the amendment on the parent/guardian record in Kompanion.</inlineHelpText>
        <label>Parent/Guardian Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Has_Logged_In__c</fullName>
        <formula>IF(  User__r.Parent_Has_Logged_In__c = TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Has Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Survey_Email_Template_ID__c</fullName>
        <description>Not updated since migration from BSF</description>
        <formula>CASE(SchoolText__c, 
&quot;The British International School of Kuala Lumpur&quot;, &quot;ERROR - NOT DEFINED&quot;, 
&quot;The British College of Brazil&quot;, &quot;ERROR - NOT DEFINED&quot;, 
&quot;The British School of Tashkent&quot;, &quot;ERROR - NOT DEFINED&quot;, 
&quot;The International School of Moscow&quot;, &quot;ERROR - NOT DEFINED&quot;, 
&quot;The King&apos;s School Manila&quot;, &quot;ERROR - NOT DEFINED&quot;, 
&quot;The British School of Nanjing&quot;, &quot;ERROR - NOT DEFINED&quot;, 
&quot;The British School Yangon&quot;, &quot;ERROR - NOT DEFINED&quot;,
&quot;ERROR - NOT DEFINED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Survey Email Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Survey_URL_BR__c</fullName>
        <formula>&quot;http://www.tfaforms.com/285359?tfa_8644839331507=&quot;&amp;IF(Main_Parent_File__c &lt;&gt; &quot;&quot;, Main_Parent_File__r.Id , Account.Id )&amp;&quot;&amp;tfa_8644839331547=&quot;&amp;OwnerId&amp;&quot;&amp;tfa_8644839331548=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Survey URL (BR)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Survey_URL_EN__c</fullName>
        <formula>&quot;http://www.tfaforms.com/249971?tfa_8644839331507=&quot;&amp;IF(Main_Parent_File__c &lt;&gt; &quot;&quot;,  Main_Parent_File__r.Id ,  Account.Id )&amp;&quot;&amp;tfa_8644839331547=&quot;&amp;OwnerId&amp;&quot;&amp;tfa_8644839331549=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Survey URL (EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Survey_URL_ES__c</fullName>
        <formula>&quot;http://www.tfaforms.com/285314?tfa_8644839331507=&quot;&amp;IF(Main_Parent_File__c &lt;&gt; &quot;&quot;, Main_Parent_File__r.Id , Account.Id )&amp;&quot;&amp;tfa_8644839331547=&quot;&amp;OwnerId&amp;&quot;&amp;tfa_8644839331548=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Survey URL (ES)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Survey_URL_RU__c</fullName>
        <formula>&quot;http://www.tfaforms.com/285361?tfa_8644839331507=&quot;&amp;IF(Main_Parent_File__c &lt;&gt; &quot;&quot;, Main_Parent_File__r.Id , Account.Id )&amp;&quot;&amp;tfa_8644839331547=&quot;&amp;OwnerId&amp;&quot;&amp;tfa_8644839331548=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Survey URL (RU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part-Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pastoral_Report_Accessed__c</fullName>
        <label>Pastoral Tab Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Person_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Attachment_Id__c</fullName>
        <label>Photo Attachment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Contact_Page_Accessed__c</fullName>
        <label>My Contact Details Accessed</label>
        <type>DateTime</type>
    </fields>
</CustomObject>